# blog-test

./: .env  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: dece8b5c78f4_first_commit.py  edaf5e20bc64_add_default_models.py
backend/app/api/v1/: posts.py  routers.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  comment.py  post.py  user.py
backend/app/repositories/: post_repository.py  user_repository.py
backend/app/schemas/: post.py  user.py
backend/app/services/: post_service.py  user_service.py
backend/scripts/: prestart.sh
nginx/conf.d/: default.conf
